<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Coffee Order App</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order_summary">Order summary</string>
    <string name="order">Order</string>
    <string name="notTitle" translatable="false">Testing !</string>
    <string name="notContent" translatable="false"> This is notification !</string>

    <string name="order_summary_name">Name: <xliff example="Robert" id="name">%s</xliff> </string>
    <string name="order_summary_whipped">Add whipped cream ? <xliff example="true" id="whipped">%b</xliff> </string>
    <string name="order_summary_chocolate">Add chocolate ? <xliff example="false" id="chocolate">%b</xliff> </string>
    <string name="order_summary_total">Total: € <xliff example="12" id="total">%d</xliff> </string>
    <string name="order_summary_quantity">Quantity: <xliff example="1" id="quantity">%d</xliff> </string>
    <string name="thank_you">Thank you!</string>
</resources>